# chip-jobs-monitor

./: .env.example  .gitignore  ARM_IMPLEMENTATION_PLAN.md  LICENSE  README.md  SCORE_LEDGER_REFACTOR_PLAN.md  SCORING_MODEL_REVIEW_SUMMARY_AND_PLAN.md  com.example.chip-jobs-monitor.plist  daily.py  daily_test.py  db.mjs  db.py  db.test.mjs  fetch.py  fetch_sources.py  fetch_test.py  package-lock.json  package.json  run-daily.sh  score_test.py  test_arm_source.py  verify_db.py  verify_fetch_render.py
db/: schema.sql
fixtures/: scoring_smoke_jobs.json
scorer/: pyproject.toml
scorer/src/scorer/: llm.py  profile.py  score.py
scorer/src/scorer/schemas/: profile.schema.json  score.schema.json
scripts/: backfill-db.mjs  backfill-posted-dates.mjs  dashboard-server.mjs  import-rescore-report.mjs  import-rescore-report.py  migrate-db.mjs
sources/: __init__.py  amazon.py  amd.py  arm.py  base.py  workday.py
web/: dashboard.css  dashboard.html  dashboard.js
