[project]
name = "nvidia-jobs-scorer"
version = "0.1.0"
description = "LLM-based resume↔NVIDIA-jobs fit scorer using codex CLI (OAuth)"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scorer"]
